fixed formatting on mobile

--- a/styles.css
+++ b/styles.css
@@ -241,11 +241,12 @@ ul.ba-reset ul li {
 
     #json-generator-upper {
         flex-direction: column-reverse;
-        gap: 0!important;;
+        gap: 0!important;
+        margin-bottom: 1rem!important;
     }
 
-    #json-generator-container {
-        gap: 0!important;
+    #json-generator-container div:first-child {
+        margin-bottom: 0!important;
     }
 }
 
